apps/base/naja-admin/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: naja-admin-api-service
  namespace: naja-admin
  labels:
    app: naja-admin-api
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: naja-admin-api
  type: ClusterIP
