apps/base/naja-admin/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: naja-admin-frontend-service
  namespace: naja-admin
  labels:
    app: naja-admin-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: naja-admin-frontend
  type: ClusterIP
